src/objects/Episode__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Visit__c</fullName>
        <label>Date of Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Episode_ID__c</fullName>
        <displayFormat>EP- 1{000}</displayFormat>
        <label>Episode ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Episodes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Episodes (Account)</relationshipLabel>
        <relationshipName>Episodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>claims__c</fullName>
        <defaultValue>false</defaultValue>
        <label>claims</label>
        <type>Checkbox</type>
    </fields>
    <label>Episode</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Episode_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Doctor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Episodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>